# HexSoftware-Expense-Tracker

./: .editorconfig  .gitignore  LAUNCHER_README.md  README.md  pyproject.toml  run_ledgerlite.py  start_ledgerlite.bat  start_ledgerlite.sh
assets/: styles.qss
ledgerlite/: README.md  __init__.py  pyproject.toml
ledgerlite/app/: __init__.py  main.py
ledgerlite/app/charts/: __init__.py  category_bar.py  monthly_trend.py
ledgerlite/app/ui/: __init__.py  main_window.py
ledgerlite/app/ui/pages/: __init__.py  base_page.py  budgets_page.py  categories_page.py  dashboard_page.py  import_export_page.py  transactions_page.py
ledgerlite/app/ui/widgets/: __init__.py  budget_progress.py  category_badge.py  kpi_card.py  transaction_form.py
ledgerlite/app/utils/: formatters.py
ledgerlite/assets/: styles.qss
ledgerlite/data/: __init__.py  db.py  models.py  repo.py
ledgerlite/scripts/: dev_run.sh  package_mac.sh
ledgerlite/services/: __init__.py
ledgerlite/tests/: __init__.py
ledgerlite/utils/: __init__.py  config.py  currency.py  dates.py  formatters.py  validators.py
scripts/: dev_run.sh  package_mac.sh
